--- a/public/404.html
+++ b/public/404.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>Erreur (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
+  <style class="rails-default-error-page">
   .rails-default-error-page {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
-    font-family: arial, sans-serif;
     margin: 0;
   }
 
@@ -58,10 +58,9 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+      <h1>Oops ! Il y a un petit souci avec votre page</h1>
+        <h2>Mais pas de panique, nos lapinous sont sur le coup</h2>
+
   </div>
 </body>
 </html>
